# game_code_gen

./: .gitignore  README.md  game_spec.json  main.py  pyproject.toml
src/gameforge/: ai_client.py  executor.py  parser.py  prompts.py
src/games/blockfall/: game.js  index.html  sounds.js
src/games/blockfall/responses/: response_blockfall.txt
src/games/specs/: game_specifications.txt
src/games/tower_rescue/: README.md  game.js  index.html
src/games/tower_rescue/responses/: response_towerrescue.txt
src/games/treasurehunter/: game.js  index.html
src/games/treasurehunter/responses/: response_treasurehunter.txt
